--- a/config-data/ms-registroreserva-comprobantepago.yaml
+++ b/config-data/ms-registroreserva-comprobantepago.yaml
@@ -21,13 +21,10 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: felipe.cubillos.a@usach.cl # Considera usar variables de entorno para esto también
-    password: devh aqgr ouhn pnkv # ¡¡¡MUY IMPORTANTE: NO COMMITAR CONTRASEÑAS REALES!!! Usar Secrets o variables de entorno.
+    password: ${SMTP_PASSWORD} # ¡¡¡MUY IMPORTANTE: NO COMMITAR CONTRASEÑAS REALES!!! Usar Secrets o variables de entorno.
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
-      # Adicional para Gmail si es necesario (puede que no lo sea con starttls)
-      # mail.smtp.ssl.trust: "smtp.gmail.com"
-      # mail.smtp.ssl.protocols: "TLSv1.2"
 
 eureka:
   instance:
