ahora si, secret implementado

--- a/deployment/mail-secret.yaml
+++ b/deployment/mail-secret.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: smtp-credentials # You can change this name if you prefer
-type: Opaque # Default type for arbitrary user-defined data
+  name: smtp-credentials
+type: Opaque
 data:
-  # The key is 'smtp-password', and the value is the base64 encoded password
   smtp-password: ZGV2aCBhcWdyIG91aG4gcG5rdg==
