--- a/deployment/ms-registroreserva-comprobantepago-deployment.yaml
+++ b/deployment/ms-registroreserva-comprobantepago-deployment.yaml
@@ -45,7 +45,12 @@ spec:
                   name: app-configmap
                   key: SPRING_DATASOURCE_USERNAME 
             - name: SPRING_DATASOURCE_PASSWORD
-              value: "postgres"                           
+              value: "postgres"
+            - name: SMTP_PASSWORD 
+              valueFrom:
+                secretKeyRef:
+                  name: smtp-credentials
+                  key: smtp-password                   
 ---
 apiVersion: v1
 kind: Service
