--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,13 @@
     "@mui/material": "^7.0.2",
     "@mui/x-charts": "^7.28.0",
     "axios": "^1.8.4",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.2",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3"
